@@ -3,17 +3,16 @@
 <!DOCTYPE MODE SYSTEM "xmode.dtd">
 
 <!--  
-      SAS edit mode by Bill McMilleon (bill@mcmilleon.com)
-      March 19, 2003
+      SAS edit mode by Bill McMilleon (bill@mcmilleon.com) March 19, 2003
       updated by Ian Helgesen 2007-10-02
       updated by goebbe 2009-05-19
+      updated by goebbe 2010-01-19
       
       Suggested catalog file entry:
 
       <MODE NAME="SAS"		FILE="sas.xml" FILE_NAME_GLOB="*.{sas}" />
 
 -->
- 
 
 <MODE>
 <PROPS>
@@ -25,7 +24,7 @@
 
     <PROPERTY NAME="commentStart" VALUE="/*" />
     <PROPERTY NAME="commentEnd" VALUE="*/" />
-    <PROPERTY NAME="lineComment" VALUE="%*" />
+    <PROPERTY NAME="lineComment" VALUE="*" />
 </PROPS>
     
     <RULES IGNORE_CASE="TRUE" NO_WORD_SEP="_" HIGHLIGHT_DIGITS="TRUE">
@@ -34,23 +33,23 @@
 \extend_source option is invoked -->
     <!-- TERMINATE AT_CHAR="72" / -->
 
-<!-- C style comment -->
-<SPAN TYPE="COMMENT1">
-	<BEGIN>/*</BEGIN>
-	<END>*/</END>
-</SPAN>
-
-<!-- COMMENT2: range comment in the case when there is nothing OR nothing but space between the last ; and the *   -->
+<!-- type2-range comment in the case when there is nothing OR nothing but space between the last ; and the *   -->
 <!-- Currently the ending ; of a comment cannot be used in regexp inside Jedit -->
-<!-- therefore several COMMENT2 range comments in a row requires regexp for each case -->
+<!-- therefore several type2-range comments in a row requires regexp for each case -->
 
-<!-- Currently only two COMMENT2 range-comments in row (per line) are implemented  -->
-<!-- The rational behind the solution is the following: Define the "complete COMMENT2-block -->
-<!-- AND the start of the second COMMENT2 block" as the start of the second COMMENT2 range comment  -->
+<!-- Currently only two type2-range-comments in row (per line) are implemented  -->
+<!-- The rational behind the solution is the following: Define the "complete type2-comment block -->
+<!-- AND the start of the second typ2-comment block" as the start of the type2-range comment  -->
 
-<!-- case1: two COMMENT2 range comments in a row at the start of a line: -->
+<!-- case0: two COMMENT2 range comments in a row at the start of a line: -->
 <SPAN_REGEXP TYPE="COMMENT2" HASH_CHAR="*" AT_WHITESPACE_END="TRUE" EXCLUDE_MATCH="FALSE">
     <BEGIN>[*][^;]*[;][\s]*[*]</BEGIN>
+    <END>;</END>
+</SPAN_REGEXP>
+
+<!-- case1: two comments in a row /*comment*/ *comment; - at the start of a line, : -->
+<SPAN_REGEXP TYPE="COMMENT2" HASH_CHAR="/*" AT_WHITESPACE_END="TRUE" EXCLUDE_MATCH="FALSE">
+    <BEGIN>([/][*][*][/][\s]*[*])|([/][*](.)*[*][/][\s]*[*])</BEGIN>
     <END>;</END>
 </SPAN_REGEXP>
 
@@ -60,66 +59,83 @@
     <END>;</END>
 </SPAN_REGEXP>
 
-<!-- case3: two COMMENT2 range comments in a row after SAS-code: -->
+<!-- case3: two COMMENT2 range comments in a row -  after SAS-code:--> 
 <SPAN_REGEXP TYPE="COMMENT2"  HASH_CHAR=";" EXCLUDE_MATCH="FALSE">
     <BEGIN>[;][\s]*[*][^;]*[;][\s]*[*]</BEGIN>
     <END>;</END>
 </SPAN_REGEXP>
 
-<!-- case4: one COMMENT2 range comment after SAS-code: -->
+<!-- case4: two comments in a row /*comment*/ *comment; - after SAS-code:-->
+<SPAN_REGEXP TYPE="COMMENT2" HASH_CHAR=";" EXCLUDE_MATCH="FALSE">
+    <BEGIN>[;][\s]*[/][*](.)*[*][/][\s]*[*]</BEGIN>
+    <END>;</END>
+</SPAN_REGEXP>
+
+<!-- case5: one COMMENT2 range comment after SAS-code: -->
 <SPAN_REGEXP TYPE="COMMENT2" HASH_CHAR=";" EXCLUDE_MATCH="FALSE">
     <BEGIN>[;][\s]*[*]</BEGIN>
     <END>;</END>
 </SPAN_REGEXP>
 
-
+<!-- range-comment "macro"-type -->
 <SPAN TYPE="COMMENT2">
     <BEGIN>%*</BEGIN>
     <END>;</END>
 </SPAN>
 
+<!-- C style comment -->
+<SPAN TYPE="COMMENT1">
+	<BEGIN>/*</BEGIN>
+	<END>*/</END>
+</SPAN>
 
 <SPAN TYPE="LITERAL1" NO_LINE_BREAK="FALSE">
     <BEGIN>'</BEGIN>
     <END>'</END>
 </SPAN>
+
 <SPAN TYPE="LITERAL2" NO_LINE_BREAK="FALSE">
     <BEGIN>"</BEGIN>
     <END>"</END>
 </SPAN>
 
 <!-- PROCS                 -->
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC ANOVA</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC APPEND</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC BOXPLOT</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC CONTENTS</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC DATASETS</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC DELETE</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC FORMAT</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC FREQ</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC IMPORT</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC MEANS</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC PRINT</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC REPORT</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC SORT</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC SQL</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC UNIVARIATE</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC ANOVA</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC APPEND</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC BOXPLOT</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC CONTENTS</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC DATASETS</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC DELETE</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC FORMAT</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC FREQ</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC IMPORT</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC MEANS</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC PRINTTO</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC PRINT</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC REPORT</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC SORT</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC SQL</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC UNIVARIATE</SEQ>
 
-<SEQ TYPE="FUNCTION" AT_WHITESPACE_END="TRUE">DATA </SEQ>
+<SEQ TYPE="KEYWORD1" AT_WHITESPACE_END="TRUE">DATA </SEQ>
 <SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">%INCLUDE</SEQ>
 
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">PROC</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">RUN;</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">QUIT;</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">PROC</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">RUN;</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">QUIT;</SEQ>
 
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">%macro</SEQ>
-<SEQ TYPE="FUNCTION" AT_WORD_START="TRUE">%mend</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">%macro</SEQ>
+<SEQ TYPE="KEYWORD1" AT_WORD_START="TRUE">%mend</SEQ>
 
 <!--<SEQ_REGEXP TYPE="FUNCTION" AT_WORD_START="TRUE">\s*%\S+\s?\(</SEQ_REGEXP>-->
 <!--<SEQ_REGEXP TYPE="KEYWORD2" HASH_CHAR="%">\%\s*\(</SEQ_REGEXP>-->
 
-<SEQ_REGEXP TYPE="KEYWORD3" HASH_CHAR="%" AT_WHITESPACE_END="TRUE">%\S+\(</SEQ_REGEXP>
-<SEQ_REGEXP TYPE="KEYWORD3" HASH_CHAR="&amp;" AT_LINE_START="TRUE">&amp;\S+(\.|;|\s)</SEQ_REGEXP>
+<SEQ_REGEXP TYPE="KEYWORD3" HASH_CHAR="%" AT_WHITESPACE_END="TRUE">%\S+\s*\(</SEQ_REGEXP>
+<SEQ_REGEXP TYPE="MARKUP" HASH_CHAR="&amp;">(&amp;*\w+)+(\.+|,|;|\s|$|\}|\))</SEQ_REGEXP>
+<!--<SEQ_REGEXP TYPE="MARKUP" HASH_CHAR="&amp;" AT_LINE_START="TRUE">&amp;\S+(\.|;|\s)</SEQ_REGEXP>-->
+
+<!--"data"+"=" can also be a keyword that is applied inside a proc or a data step:-->
+<SEQ_REGEXP TYPE="KEYWORD2" HASH_CHAR="DATA">(DATA)[\s]*[=]</SEQ_REGEXP>
 
 <!--<SEQ TYPE="MARKUP" AT_WORD_START="TRUE">ODS CSV</SEQ>
 <SEQ TYPE="MARKUP" AT_WORD_START="TRUE">ODS CSV CLOSE</SEQ>
@@ -291,6 +307,7 @@
       <KEYWORD2>INTO</KEYWORD2>
       <KEYWORD2>INPUT</KEYWORD2>
       <KEYWORD2>INR</KEYWORD2>
+      <KEYWORD2>INVALUE</KEYWORD2>
       <KEYWORD2>JOIN</KEYWORD2>
       <KEYWORD2>JULIAN</KEYWORD2>
       <KEYWORD2>KEEP</KEYWORD2>
@@ -439,3 +456,5 @@
     </RULES>
 </MODE>
 
+
+ 	  	 
